# omnimash

./: .env.example  .gitignore  CLAUDE.md  CODE_STANDARDS.md  Dockerfile  GEMINI.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/diagrams/: README.md  frontend_api_topology.md  gcp_deployment_patterns.md  multimodal_ingestion_stitching.md  omnimash_agent_architecture.md  version_tree_dag_lifecycle.md
docs/notes/: README.md  api_structure_routers_and_lifespan.md  architecture_omnimash.md  audio_dialogue_and_voiceover_prompting.md  centralized_settings_and_env.md  character_consistency_roadmap.md  codebase_review_backlog.md  context_decay_commit_branch.md  delta_prompting_lock_isolate.md  development_workflow_prs.md  digital_directors_studio_3_act_workflow.md  gcs_artifact_persistence.md  joint_audio_video_latent_prompting.md  prompt_compiler_anchor_inject.md  reference_analysis_and_preset_inspector.md  request_lifecycle.md  screenplay_vs_guided_directing.md  session-store-limitations.md  session_naming_and_resilient_video_rendering.md  session_scoped_gcs_artifacts.md  subagent_workflow_quirks.md  user_journey_and_multimodal_inputs.md  youtube_reference_ingestion.md
docs/plans/: 2026-07-18-omnimash-context-window-commit-branch.md  2026-07-18-omnimash-conversational-delta-prompt-compiler.md  2026-07-18-omnimash-core-architecture.md  2026-07-18-omnimash-prompt-compiler-anchor-inject.md  2026-07-19-digital-directors-studio-3-act-refactor.md  2026-07-19-omnimash-youtube-reference-ingestion.md  2026-07-19-preset-transparency.md  2026-07-19-session-selector.md  2026-07-20-flexible-parody-workflow-and-character-roles.md  2026-07-20-omni-flash-retry-and-error-mitigation.md  2026-07-20-prompt-visibility.md  2026-07-20-relaxed-safety-and-expanded-prompt-abstraction.md  2026-07-20-save-and-reload-characters.md  2026-07-20-voiceover-audio-guide.md  2026-07-21-authenticated-gcs-media-proxy-and-character-preservation.md  2026-07-21-character-ref-pass-through-and-logging.md  2026-07-21-custom-session-naming-and-sync.md  2026-07-21-diagram-documentation-and-topology-update.md  2026-07-21-gcs-session-folder-selector.md  2026-07-21-gcs-session-preservation.md  2026-07-21-gcs-video-url-proxy.md  2026-07-21-multi-scene-stitching.md  2026-07-21-multimodal-reference-images.md  2026-07-21-ref-image-proxy.md  2026-07-21-screenplay-prompt-compiler-fix.md  2026-07-21-screenplay-scripting-and-global-vs-local-context.md  2026-07-21-storage-naming-and-plan-conciseness.md  2026-07-21-ui-stitching-label-and-documentation-audit.md  2026-07-21-unique-role-id-allocation-fix.md  2026-07-22-30-to-60s-omni-flash-user-journey-plan.md  2026-07-22-codebase-review-remediation.md  2026-07-22-qualitative-audio-and-prompt-optimizer.md  2026-07-22-relaxed-safety-settings-fix.md
scratch/: render_readme_screenshots.py
scripts/: deploy_agent_engine.py  deploy_cloud_run.sh  setup_gcs_bucket.sh
src/omnimash/: __init__.py  config.py  errors.py
src/omnimash/agent/: __init__.py  agent.py  orchestrator.py
src/omnimash/agent/.adk/: session.db
src/omnimash/api/: app.py  deps.py  schemas.py
src/omnimash/engine/: media_utils.py  omni_client.py
src/omnimash/ingestion/: __init__.py  media_extractor.py
src/omnimash/prompts/: __init__.py  compiler.py  storyboard_agent.py  taxonomy.py
src/omnimash/security/: __init__.py  guardrail.py
src/omnimash/state/: __init__.py  session_manager.py
src/omnimash/stitching/: stitcher.py
src/omnimash/storage/: __init__.py  gcs.py
tests/: test_config.py  test_foundation.py
tests/agent/: test_orchestrator.py  test_single_change_diff.py
tests/api/: test_app.py  test_character_api.py  test_concept_api.py  test_integration.py
tests/engine/: test_media_utils.py  test_omni_client.py  test_omni_retry.py
tests/ingestion/: test_media_extractor.py
tests/prompts/: test_character_roles.py  test_compiler.py  test_deconstruct.py  test_storyboard_agent.py  test_taxonomy.py
tests/security/: test_guardrail.py
tests/state/: test_session_manager.py
tests/stitching/: test_audio_overlay.py  test_stitcher.py
tests/storage/: test_gcs.py
(+6 files in other folders)
