[project]
name = "omnimash-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.2",
    "fastapi>=0.139.2",
    "ffmpeg-python>=0.2.0",
    "google-adk>=2.5.0",
    "google-cloud-aiplatform>=1.161.0",
    "google-cloud-storage>=3.13.0",
    "google-genai>=2.12.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.51.0",
    "yt-dlp>=2026.7.4",
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = [
    # Line width is owned by `ruff format`; E501 otherwise just flags long
    # strings/URLs the formatter intentionally leaves intact.
    "E501",
    # subprocess invocation with a partial path is intentional (ffmpeg) and
    # centralized behind a bounded runner (see engine/media_utils.py).
    "S603",
    "S607",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]  # asserts and /tmp scratch paths are fine in tests
# The entries below suppress lint for patterns that dedicated tasks in this same
# remediation PR replace outright. Trim each as its task lands:
#   Task 2.2 (fix engine): route ffmpeg through a bounded runner (omni_client S110)
#   Task 2.3 (fix engine): unique/cleaned temp files (media_extractor/stitcher S108/S110/SIM105)
#   Task 2.5 (fix storage): surface GCS errors instead of swallowing (gcs S110)
"src/omnimash/engine/omni_client.py" = ["S110"]
"src/omnimash/ingestion/media_extractor.py" = ["S108", "S110", "SIM105"]
"src/omnimash/stitching/stitcher.py" = ["S108"]
"src/omnimash/storage/gcs.py" = ["S110"]

[tool.ty.environment]
python-version = "3.12"
