[project]
name = "omnimash-agent"
version = "0.1.0"
description = "OmniMash — AI parody/mashup video studio built on Gemini Omni Flash."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.2",
    "fastapi>=0.139.2",
    "ffmpeg-python>=0.2.0",
    "google-adk>=2.5.0",
    "google-cloud-aiplatform>=1.161.0",
    "google-cloud-storage>=3.13.0",
    "google-genai>=2.12.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.51.0",
    "yt-dlp>=2026.7.4",
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=omnimash --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = [
    # Line width is owned by `ruff format`; E501 otherwise just flags long
    # strings/URLs the formatter intentionally leaves intact.
    "E501",
    # subprocess invocation with a partial path is intentional (ffmpeg) and
    # centralized behind a bounded runner (see engine/media_utils.py).
    "S603",
    "S607",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]  # asserts and /tmp scratch paths are fine in tests

[tool.ty.environment]
python-version = "3.12"
